[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/BossRelampago-sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BossRelampago.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Atention.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/OutlineShader.gdshader" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7168, 12.0093 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.886275, 0.654902, 0.0941176, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Relampago",
"speed": 20.0
} ]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 12 )
shader_param/rainbow = false
shader_param/line_color = Color( 0.909804, 0.219608, 0.196078, 1 )
shader_param/line_scale = 0.5
shader_param/frequency = 0.5
shader_param/light_offset = 0.5
shader_param/alpha = 1.0

[sub_resource type="GDScript" id=9]
script/source = "extends Sprite

var global_position_y = -16

func _process(delta):
	position.y = global_position_y + 2*sin(2*PI*delta)
	pass
"

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 0.94902, 0.321569, 0.0784314, 0, 0.898039, 0.647059, 0.054902, 1 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15.8216, 10.5797 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 15.7554, 4.15129 )

[sub_resource type="CircleShape2D" id=13]
radius = 510.0

[node name="Boss" type="KinematicBody2D" groups=[
"minimap_objects",
]]
z_index = 1
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
material = SubResource( 2 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )
animation = "Relampago"
frame = 1
playing = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RunerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Atention" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
script = SubResource( 9 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 40
explosiveness = 0.44
lifetime_randomness = 0.14
local_coords = false
emission_shape = 1
emission_sphere_radius = 20.0
spread = 154.57
gravity = Vector2( 0, -98 )
initial_velocity = 20.0
scale_amount = 2.0
scale_amount_random = 1.0
color = Color( 1, 0.917647, 0.384314, 1 )

[node name="Trail" parent="." instance=ExtResource( 4 )]
z_index = -1
points = PoolVector2Array( 117.613, 49.1675 )
width = 15.0
default_color = Color( 0.898039, 0.647059, 0.054902, 1 )
gradient = SubResource( 10 )
targetPath = NodePath("..")
traillen = 100

[node name="Head" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2( 0, -0.458142 )
shape = SubResource( 11 )

[node name="Legs" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Legs"]
position = Vector2( -0.463513, 14.3027 )
shape = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 13 )

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="RunerTimer" to="." method="_on_RunerTimer_timeout"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
